[gd_scene load_steps=32 format=3 uid="uid://rjkppaofm66q"]

[ext_resource type="Script" path="res://Scripts/CustomNodes/Commander.gd" id="1_f6n8e"]
[ext_resource type="Texture2D" uid="uid://bdygr4xqk4xa0" path="res://Images/Units/Dwarf Sprite Sheet 1.3v.png" id="2_nye7s"]
[ext_resource type="Script" path="res://Scripts/ComponentScripts/NavigationComponent.gd" id="4_0uy8i"]
[ext_resource type="Script" path="res://Scripts/ComponentScripts/TargetAcquisitionComponent.gd" id="4_t0x4a"]
[ext_resource type="PackedScene" uid="uid://bwjhrgd44dnny" path="res://Scenes/Components/HealthComponent.tscn" id="5_fb1w0"]
[ext_resource type="Script" path="res://Scripts/ComponentScripts/DamageComponent.gd" id="6_cef23"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5vtod"]
radius = 8.38893

[sub_resource type="AtlasTexture" id="AtlasTexture_8n8lk"]
atlas = ExtResource("2_nye7s")
region = Rect2(0, 96, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m77qc"]
atlas = ExtResource("2_nye7s")
region = Rect2(64, 96, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhcuj"]
atlas = ExtResource("2_nye7s")
region = Rect2(128, 96, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bsb48"]
atlas = ExtResource("2_nye7s")
region = Rect2(192, 96, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q62f1"]
atlas = ExtResource("2_nye7s")
region = Rect2(256, 96, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l7kc4"]
atlas = ExtResource("2_nye7s")
region = Rect2(320, 96, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_okh81"]
atlas = ExtResource("2_nye7s")
region = Rect2(0, 192, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fp15j"]
atlas = ExtResource("2_nye7s")
region = Rect2(64, 192, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_57kb1"]
atlas = ExtResource("2_nye7s")
region = Rect2(128, 192, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x0cou"]
atlas = ExtResource("2_nye7s")
region = Rect2(192, 192, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_57xlx"]
atlas = ExtResource("2_nye7s")
region = Rect2(0, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tnp1e"]
atlas = ExtResource("2_nye7s")
region = Rect2(64, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j74nu"]
atlas = ExtResource("2_nye7s")
region = Rect2(128, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d25mv"]
atlas = ExtResource("2_nye7s")
region = Rect2(192, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_io418"]
atlas = ExtResource("2_nye7s")
region = Rect2(256, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s04sn"]
atlas = ExtResource("2_nye7s")
region = Rect2(0, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i57yg"]
atlas = ExtResource("2_nye7s")
region = Rect2(64, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xoouf"]
atlas = ExtResource("2_nye7s")
region = Rect2(128, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8hlg1"]
atlas = ExtResource("2_nye7s")
region = Rect2(192, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tm2rn"]
atlas = ExtResource("2_nye7s")
region = Rect2(256, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ncrgl"]
atlas = ExtResource("2_nye7s")
region = Rect2(320, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6rbaf"]
atlas = ExtResource("2_nye7s")
region = Rect2(384, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8047r"]
atlas = ExtResource("2_nye7s")
region = Rect2(448, 32, 64, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_rn30h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8n8lk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m77qc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhcuj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bsb48")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q62f1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l7kc4")
}],
"loop": false,
"name": &"attacking",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_okh81")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fp15j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_57kb1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x0cou")
}],
"loop": false,
"name": &"damaged",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_57xlx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tnp1e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j74nu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d25mv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_io418")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s04sn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i57yg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xoouf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8hlg1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tm2rn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ncrgl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6rbaf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8047r")
}],
"loop": true,
"name": &"running",
"speed": 10.0
}]

[node name="Commander" type="CharacterBody2D" node_paths=PackedStringArray("navigationComponent", "targetAcquisitionComponent", "healthComponent", "damageComponent")]
self_modulate = Color(1, 1, 0.101961, 1)
collision_layer = 0
motion_mode = 1
wall_min_slide_angle = 1.5708
safe_margin = 1.0
script = ExtResource("1_f6n8e")
navigationComponent = NodePath("NavigationComponent")
targetAcquisitionComponent = NodePath("TargetAcquisitionComponent")
healthComponent = NodePath("HealthComponent")
damageComponent = NodePath("DamageComponent")

[node name="NavigationComponent" type="NavigationAgent2D" parent="."]
path_max_distance = 40.0
path_postprocessing = 1
debug_enabled = true
script = ExtResource("4_0uy8i")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 6)
scale = Vector2(0.834433, 0.74228)
shape = SubResource("CircleShape2D_5vtod")

[node name="HealthComponent" parent="." instance=ExtResource("5_fb1w0")]
position = Vector2(0, -11)
healthBarVisible = false

[node name="TargetAcquisitionComponent" type="Node2D" parent="."]
script = ExtResource("4_t0x4a")
detectionRange = 100.0

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_rn30h")
animation = &"damaged"

[node name="DamageComponent" type="Node2D" parent="."]
script = ExtResource("6_cef23")
